TREM.Electron/css/index.css
/* ... */
.report-list-item > .report-list-item-container > .report-list-item-intensity {
	position: relative;
	width: 36px;
	height: 36px;
	text-align: center;
	line-height: 36px;
	border-radius: 36px;
	font-weight: 600;
	font-size: 20px;
	color: white;
}

.report-list-item > .report-list-item-container > .report-list-item-label {
	display: flex;
	flex-direction: column;
	flex: 1;
	margin: 0 8px;
	white-space: nowrap;
}

.report-list-item > .report-list-item-container > .report-list-item-label > .report-list-item-location {
	font-weight: 500;
}

.report-list-item > .report-list-item-container > .report-list-item-label > .report-list-item-description > .report-list-item-icon:not(:first-child)  {
	margin-left: 8px;
	margin-right: 2px;
}

.report-list-item > .report-list-item-container > .report-list-item-label > .report-list-item-description > .report-list-item-icon  {
	margin-right: 4px;
	font-size: 18px;
	vertical-align: bottom;
}

.report-list-item > .report-list-item-container > .report-list-item-label > .report-list-item-description {
	color: rgb(var(--md-sys-color-on-surface-variant));
	font-size: 14px;
}

#report-overview-number {
	line-height: 46px;
	font-size: 38px;
	font-weight: 700;
	letter-spacing: 0.75px;
	color: rgb(var(--md-sys-color-primary));
	flex: 1;
}

#report-overview-header, #report-overview-body {
	margin-bottom: 12px;
	display: flex;
	flex-direction: column;
}

#report-overview-body .report-overview-item {
	margin-bottom: 8px;
}

.report-overview-item {
	color: rgb(var(--md-sys-color-on-surface));
}

.report-overview-item .report-overview-item-icon {
	color: rgb(var(--md-sys-color-secondary));
	font-size: 20px;
	vertical-align: bottom;
}

.report-overview-item .report-overview-item-label {
	color: rgb(var(--md-sys-color-on-secondary-container));
	margin-bottom: 4px;
	font-weight: 400;
}

.report-overview-item .report-overview-value > span {
	position: relative;
	line-height: 26px;
	font-size: 22px;
	font-weight: 500;
}

.report-overview-item .report-overview-value > .report-overview-unit {
	color: rgb(var(--md-sys-color-on-surface-variant));
	font-size: 14px;
	font-weight: 400;
}

.report-overview-item .report-overview-value > span:not(.report-overview-unit) + .report-overview-unit {
	margin-right: 8px;
}

#report-overview-intensity.strong::after {
	position: absolute;
	content: "+";
	top: -5px;
	right: -10px;
	font-size: 20px;
}

#report-overview-intensity.weak::after {
	position: absolute;
	content: "-";
	top: -4px;
	right: -8px;
	font-size: 20px;
}

